# flask-gmail-poc

./: README.md  pyproject.toml
src/common/: app.py  google.py
